samples/_failures_safe/1761543567_2d8200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8385bd54.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_8385bd54.c:158:29: error: expected ‘)’ at end of input
  158 |                 if (new_dist
      |                    ~        ^
      |                             )
./samples/SAFE/__tmp_8385bd54.c:158:17: error: expected declaration or statement at end of input
  158 |                 if (new_dist
      |                 ^~
./samples/SAFE/__tmp_8385bd54.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8385bd54.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8385bd54.c:158:17: error: expected declaration or statement at end of input
